# uvbump

./: README-ja.md  README.md  poe_tasks.toml  pyproject.toml
.amazonq/rules/: project.md
.github/: dependabot.yml
.github/workflows/: build-package.yml
src/bumpuv/: _core_test.py  _integration_test.py
src/uvbump/: __init__.py  __main__.py  _core.py  _core_test.py  _integration_test.py
